Add Unfiltrator and Shiftor in MeasureBagFromResources